--- a/frontend/sample-project-phase4/src/app/components/login/login.component.html
+++ b/frontend/sample-project-phase4/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<input #user type="text" class="form-control" name="username" placeholder="Nombre de usuario"/>
+									<input #name type="text" class="form-control" name="username" placeholder="Nombre de usuario"/>
 								</div>
 							</div>
 							<div class="col-md-12">
