Components added and updated, animation fixed
- dish-list added.
- dish-detail added.
- All animations deleted.

--- a/frontend/sample-project-phase4/src/app/components/index/index.component.html
+++ b/frontend/sample-project-phase4/src/app/components/index/index.component.html
@@ -4,7 +4,7 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
-                    <div class="col-md-12 ftco-animate">
+                    <div class="col-md-12">
                         <div class="text w-100 mt-5 text-center">
                             <span class="subheading">Tu Restaurante en Casa</span>
                             <h1>En Tu Cocina Desde</h1>
@@ -19,7 +19,7 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
-                    <div class="col-md-12 ftco-animate">
+                    <div class="col-md-12">
                         <div class="text w-100 mt-5 text-center">
                             <span class="subheading">Tu Restaurante en Casa</span>
                             <h1>Mejor Calidad</h1>
@@ -52,8 +52,8 @@
                 <div class="img img-2 w-100 mr-md-2" style="background-image:url('../assets/images/chef-4.jpg')"></div>
                 <div class="img img-2 w-100 ml-md-2" style="background-image:url('../assets/images/bg_4.jpg')"></div>
             </div>
-            <div class="col-md-6 ftco-animate makereservation p-4 p-md-5">
-                <div class="heading-section ftco-animate mb-5">
+            <div class="col-md-6 makereservation p-4 p-md-5">
+                <div class="heading-section mb-5">
                     <span class="subheading">Este Es Nuestro Secreto</span>
                     <h2 class="mb-4">Productos Frescos</h2>
                     <p>Tenemos un equipo de chefs con las más altas cualificaciones, los cuales están dispuestos a todo para servirte
