--- a/frontend/sample-project-phase4/src/app/components/contact/contact.component.html
+++ b/frontend/sample-project-phase4/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-end justify-content-center">
-        <div class="col-md-9 ftco-animate text-center mb-5">
+        <div class="col-md-9 text-center mb-5">
           <h1 class="mb-2 bread">Contacta con nosotros</h1>
           <p class="breadcrumbs"><span class="mr-2"><a [routerLink]="['/index']">Principal <i class="fa fa-chevron-right"></i></a></span>
             <span>Contacto <i class="fa fa-chevron-right"></i></span></p>
