--- a/frontend/sample-project-phase4/src/app/components/login/login.component.html
+++ b/frontend/sample-project-phase4/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-end justify-content-center">
-			<div class="col-md-9 ftco-animate text-center mb-5">
+			<div class="col-md-9 text-center mb-5">
 				<h1 class="mb-2 bread">¡Regístrate ya!</h1>
 			</div>
 		</div>
