--- a/frontend/sample-project-phase4/src/app/components/team/team.component.html
+++ b/frontend/sample-project-phase4/src/app/components/team/team.component.html
@@ -2,7 +2,7 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
-            <div class="col-md-9 ftco-animate text-center mb-5">
+            <div class="col-md-9 text-center mb-5">
                 <h1 class="mb-2 bread">Equipo</h1>
                 <p class="breadcrumbs"><span class="mr-2"><a [routerLink]="['/index']">Principal<i class="fa fa-chevron-right"></i></a></span> <span>Equipo <i class="fa fa-chevron-right"></i></span></p>
             </div>
@@ -14,13 +14,13 @@
 <section class="ftco-section bg-light">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-2">
-            <div class="col-md-7 text-center heading-section ftco-animate">
+            <div class="col-md-7 text-center heading-section">
                 <span class="subheading">Equipo</span>
                 <h2 class="mb-4">Nuestro equipo</h2>
             </div>
         </div>	
         <div class="row">
-            <div class="col-md-6 col-lg-3 ftco-animate">
+            <div class="col-md-4 col-lg-4">
                 <div class="staff">
                     <div class="img" style="background-image:url('../assets/images/chef-4.jpg')"></div>
                     <div class="text px-4 pt-2">
@@ -29,16 +29,16 @@
                         <div class="faded">
                             <p>Solo tengo un objetivo, llevar comida desde mi cocina hasta tu puerta.</p>
                             <ul class="ftco-social d-flex">
-                                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                                <li><a href="#"><span class="icon-twitter"></span></a></li>
+                                <li><a href="#"><span class="icon-facebook"></span></a></li>
+                                <li><a href="#"><span class="icon-google-plus"></span></a></li>
+                                <li><a href="#"><span class="icon-instagram"></span></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-3 ftco-animate">
+            <div class="col-md-4 col-lg-4">
                 <div class="staff">
                     <div class="img" style="background-image:url('../assets/images/chef-2.jpg')"></div>
                     <div class="text px-4 pt-2">
@@ -47,16 +47,16 @@
                         <div class="faded">
                             <p>La comida para mí es un estilo de vida: estoy todo el dia comiendo. Eso sí, que sea sin gluten.</p>
                             <ul class="ftco-social d-flex">
-                                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                                <li><a href="#"><span class="icon-twitter"></span></a></li>
+                                <li><a href="#"><span class="icon-facebook"></span></a></li>
+                                <li><a href="#"><span class="icon-google-plus"></span></a></li>
+                                <li><a href="#"><span class="icon-instagram"></span></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-md-6 col-lg-3 ftco-animate">
+            <!-- <div class="col-md-6 col-lg-3">
                 <div class="staff">
                     <div class="img" style="background-image: url(/images/chef-3.jpg);"></div>
                     <div class="text px-4 pt-2">
@@ -65,16 +65,16 @@
                         <div class="faded">
                             <p>Soy ambicioso y me gusta mi trabajo.</p>
                             <ul class="ftco-social d-flex">
-                                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                                <li><a href="#"><span class="icon-twitter"></span></a></li>
+                                <li><a href="#"><span class="icon-facebook"></span></a></li>
+                                <li><a href="#"><span class="icon-google-plus"></span></a></li>
+                                <li><a href="#"><span class="icon-instagram"></span></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div> -->
-            <div class="col-md-6 col-lg-3 ftco-animate">
+            <div class="col-md-4 col-lg-4">
                 <div class="staff">
                     <div class="img" style="background-image:url('../assets/images/chef-1.jpg')"></div>
                     <div class="text px-4 pt-2">
@@ -83,10 +83,10 @@
                         <div class="faded">
                             <p>Mi madre me decia de pequeñe que comiera mucha verdura y así he salido: vegane.</p>
                             <ul class="ftco-social d-flex">
-                                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                                <li><a href="#"><span class="icon-twitter"></span></a></li>
+                                <li><a href="#"><span class="icon-facebook"></span></a></li>
+                                <li><a href="#"><span class="icon-google-plus"></span></a></li>
+                                <li><a href="#"><span class="icon-instagram"></span></a></li>
                             </ul>
                         </div>
                     </div>
