--- a/frontend/sample-project-phase4/src/app/components/index/index.component.html
+++ b/frontend/sample-project-phase4/src/app/components/index/index.component.html
@@ -68,8 +68,8 @@
     </div>
 </section>
 
-<section class="ftco-section ftco-no-pt ftco-no-pb ftco-intro bg-primary">
-    <div class="container py-5">
+<section class="ftco-section ftco-no-pt ftco-no-pb ftco-intro bg-primary" >
+    <div class="container py-5"style="background-color:#e52b34;">
         <div class="row py-2">
             <div class="col-md-12 text-center">
                 <h2>Te Hacemos Comida Sana &amp; Deliciosa</h2>
