--- a/frontend/sample-project-phase4/src/app/app.component.html
+++ b/frontend/sample-project-phase4/src/app/app.component.html
@@ -44,7 +44,7 @@
                 <li class="nav-item"><a [routerLink]="['/team']" class="nav-link">Equipo</a></li>
                 <li class="nav-item"><a [routerLink]="['/dishes']" class="nav-link">Carta</a></li>
                 <li class="nav-item"><a [routerLink]="['/contact']" class="nav-link">Contacto</a></li>
-                <li *ngIf="loginService.isLogged()" class="nav-item"><a [routerLink]="['/profile/{{currentUser.id}}']" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <li *ngIf="loginService.isLogged()" class="nav-item"><a (click)="goToProfile()" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                   </svg></a></li>
