--- a/frontend/sample-project-phase4/src/app/components/index/index.component.html
+++ b/frontend/sample-project-phase4/src/app/components/index/index.component.html
@@ -61,7 +61,7 @@
                     </p>
                     <p>No se detendrán ante nada.
                     </p>
-                    <p><button class="btn btn-primary">Conocenos</button></p>
+                    <p><button [routerLink]="['/team']" class="btn btn-primary">Conocenos</button></p>
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
         <div class="row py-2">
             <div class="col-md-12 text-center">
                 <h2>Te Hacemos Comida Sana &amp; Deliciosa</h2>
-                <button class="btn btn-white btn-outline-white">Pide ya</button>
+                <button [routerLink]="['/dishes']" class="btn btn-white btn-outline-white">Pide ya</button>
             </div>
         </div>
     </div>
