--- a/frontend/sample-project-phase4/src/app/components/profile/user-recomendedDishes/user-recomendedDishes.component.html
+++ b/frontend/sample-project-phase4/src/app/components/profile/user-recomendedDishes/user-recomendedDishes.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-4">
             <img [src]="dishImage(dish)" style="width:200px;height:150px;">		    
         <div>
-            <a (click)="goToDish(dish.id)">{{dish.name}}</a>
+            <a style="color: red" (click)="goToDish(dish.id)">{{dish.name}}</a>
             </div>
         </div>
         <div class="col-md-8">
