--- a/frontend/sample-project-phase4/src/app/components/profile/profile.component.html
+++ b/frontend/sample-project-phase4/src/app/components/profile/profile.component.html
@@ -2,6 +2,8 @@
 <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-center">
         <div class="col-md-9 text-center mb-5">
+            <br>
+            <br>
             <h1 class="mb-2 bread">Bienvenide, {{user?.firstName}}</h1>
         </div>
     </div>
@@ -17,7 +19,7 @@
     </ul>
 </div>
 
-<div class="tab-content panel panel-info">
+<div *ngIf="loginService.isLogged()" class="tab-content panel panel-info">
     <div role="tabpanel" class="tab-pane fade in active show" id="edit" aria-labelledby="tabInfo">
         <div class="container" style="padding-top: 60px;">
             <h1 class="page-header">Editar perfil</h1>
@@ -52,7 +54,7 @@
                     <!-- {{/isadminempty}}
                 
                     {{^adminpurchases}} -->
-                        <b>No ha realizado ningún pedido.</b>
+                        <b style="color: white">No ha realizado ningún pedido.</b>
                     <!-- {{/adminpurchases}} -->
                 
 <!-- 					NORMAL USER -->						
@@ -69,7 +71,7 @@
                     <!-- {{/isempty}}
                     
                     {{^purchases}} -->
-                        <b>No ha realizado ningún pedido.</b>
+                        <b style="color: white">No ha realizado ningún pedido.</b>
                     <!-- {{/purchases}} -->
                 </ng-template>
             
