Docker, dist and README.

--- a/frontend/trec/src/app/components/index/index.component.html
+++ b/frontend/trec/src/app/components/index/index.component.html
@@ -1,6 +1,6 @@
 <section class="hero-wrap">
     <div class="home-slider owl-carousel js-fullheight">
-        <div class="slider-item js-fullheight" style="background-image:url('../assets/images/bg_1.jpg')">
+        <div class="slider-item js-fullheight" style="background-image:url('assets/images/bg_1.jpg')">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <div class="slider-item js-fullheight" style="background-image:url('../assets/images/bg_2.jpg')">
+        <div class="slider-item js-fullheight" style="background-image:url('assets/images/bg_2.jpg')">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -33,7 +33,7 @@
 </section>
 
 
-<section class="ftco-section ftco-intro" style="background-image:url('../assets/images/bg_3.jpg')">
+<section class="ftco-section ftco-intro" style="background-image:url('assets/images/bg_3.jpg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -49,8 +49,8 @@
     <div class="container">
         <div class="row d-flex">
             <div class="col-md-6 d-flex">
-                <div class="img img-2 w-100 mr-md-2" style="background-image:url('../assets/images/chef-4.jpg')"></div>
-                <div class="img img-2 w-100 ml-md-2" style="background-image:url('../assets/images/bg_4.jpg')"></div>
+                <div class="img img-2 w-100 mr-md-2" style="background-image:url('assets/images/chef-4.jpg')"></div>
+                <div class="img img-2 w-100 ml-md-2" style="background-image:url('assets/images/bg_4.jpg')"></div>
             </div>
             <div class="col-md-6 makereservation p-4 p-md-5">
                 <div class="heading-section mb-5">
