--- a/frontend/trec/src/app/components/team/team.component.html
+++ b/frontend/trec/src/app/components/team/team.component.html
@@ -1,4 +1,4 @@
-<section class="hero-wrap hero-wrap-2" style="background-image:url('../assets/images/bg_5.jpg')" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image:url('assets/images/bg_5.jpg')" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-4 col-lg-4">
                 <div class="staff">
-                    <div class="img" style="background-image:url('../assets/images/chef-4.jpg')"></div>
+                    <div class="img" style="background-image:url('assets/images/chef-4.jpg')"></div>
                     <div class="text px-4 pt-2">
                         <h3>Javier Méndez</h3>
                         <span class="position mb-2">Fundador</span>
@@ -40,7 +40,7 @@
             </div>
             <div class="col-md-4 col-lg-4">
                 <div class="staff">
-                    <div class="img" style="background-image:url('../assets/images/chef-2.jpg')"></div>
+                    <div class="img" style="background-image:url('assets/images/chef-2.jpg')"></div>
                     <div class="text px-4 pt-2">
                         <h3>Azahara Andújar</h3>
                         <span class="position mb-2">Fundador</span>
@@ -76,7 +76,7 @@
             </div> -->
             <div class="col-md-4 col-lg-4">
                 <div class="staff">
-                    <div class="img" style="background-image:url('../assets/images/chef-1.jpg')"></div>
+                    <div class="img" style="background-image:url('assets/images/chef-1.jpg')"></div>
                     <div class="text px-4 pt-2">
                         <h3>David Mestanza</h3>
                         <span class="position mb-2">Fundador</span>
