--- a/frontend/trec/src/app/app.component.html
+++ b/frontend/trec/src/app/app.component.html
@@ -67,7 +67,7 @@
     <router-outlet></router-outlet>
 </div>
 
-<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image:url('../assets/images/bg_8.jpg')">
+<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image:url('assets/images/bg_8.jpg')">
     <div class="container">
         <div class="row mb-5">
             <div class="col-md-6 col-lg-6">
