--- a/frontend/trec/src/app/components/contact/contact.component.html
+++ b/frontend/trec/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="hero-wrap hero-wrap-2" style="background-image:url('../assets/images/bg_5.jpg')" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image:url('assets/images/bg_5.jpg')" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text align-items-end justify-content-center">
