--- a/frontend/trec/src/app/components/login/login.component.html
+++ b/frontend/trec/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="hero-wrap hero-wrap-2" style="background-image:url('../assets/images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image:url('assets/images/bg_5.jpg');" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -11,7 +11,7 @@
 
 <section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">
 	<div class="container">
-		<div class="col" style="background-image:url('../assets/images/chef-4.jpg');">
+		<div class="col" style="background-image:url('assets/images/chef-4.jpg');">
 			<div class="row">
 				<div class="col-sm-4 p-4 p-md-4 d-flex align-items-center justify-content-md-end"style="background-color:#e52b34;">
 					<form action="/newuser" method="post" enctype="multipart/form-data" class="appointment-form">
